# camlproto

./: .gitattributes  .gitignore  JS.md  LICENSE  Makefile  README.md  build_js.sh  camlproto.opam  camlproto.opam.locked  dune  dune-project
.github/workflows/: ci.yml
bench/: bench.ml  dune
codegen/: .babelrc  .eslintignore  .eslintrc.json  .flowconfig  .gitignore  l82_e.tl  mtproto.tl  package-lock.json  package.json  test.tl
codegen/examples/: test.ml
codegen/flow/: graphlib.js
codegen/flow-typed/: ramda_v0.x.x.js
codegen/src/: caml.js  index.js  newtype.js  tl.js  util.js
examples/: dune
examples/e01_mtproto/: README.md  dune  e01_mtproto.ml
examples/e02_telegram/: README.md  dune  e02_telegram.ml
examples/ex1/: README.md  dune  ex1.ml
examples/ex2/: README.md  dune  ex2.ml
schema/: l108.tl  l143.tl
src/TL/: TL.ml  decoder.ml  decoder.mli  dune  encoder.ml  encoder.mli
src/TL/.old/: store.ml
src/TLGen/: TLGen.ml  dune
src/camlproto/: CamlReporter.ml  CamlReporter.mli  Camlproto.ml  camlproto.ml  dune
src/camlproto_js/: .gitignore  copy-files.js  index.js  package.json
src/logger/: dune  logger.ml  logger.mli.old
src/math/: AesIge.ml  AesIge.mli  BasicRand.ml  Bigint.ml  Bigint.mli  Crc32.ml  Crc32.mli  Crypto.ml  Factorization.ml  Factorization.mli  Math.ml  Rsa.ml  Rsa.mli  aes_ige.ml  aes_ige.mli  bigint.ml  bigint.mli  crc32.ml  crc32.mli  crypto.ml  dune  factorization.ml  factorization.mli  math.ml  rsa.ml  rsa.mli  secure_rand.ml
src/mtproto/: Authenticator.ml  Authenticator.mli  MTProto.ml  MTProto.mli  MtpTL.ml  MtpTL.mli  Types.ml  authenticator.ml  authenticator.mli  dune  misc.ml  mtpTL.ml  mtpTL.mli  mtpqueue.ml  mtpqueue.mli  mtproto.ml  mtproto.mli  types.ml
src/mtproto_misc/: MTProtoMisc.ml  dune  mtproto_misc.ml
src/mtproto_transport/: CamlTcpAbridged.ml  CamlTcpFull.ml  JsTcpFull.ml  Log.ml  MTPTransport.cppo.ml  MTPTransport.mli.old  MTProtoTransport.cppo.ml  MTProtoTransport.mli.old  Types.ml  caml_tcp_abridged.ml  caml_tcp_full.ml  dune  dune_js  js_tcp_full.js  js_tcp_full.ml  mtproto_transport.cppo.ml  mtproto_transport.mli  types.ml
src/platform/: CamlBigint.ml  CamlCrypto.ml  CamlCrypto.mli  CamlGzip.ml  Js.js  JsBigint.ml  JsCrypto.ml  JsGzip.ml  JsSecureRand.mli  Leemon.js  Platform.cppo.ml  Platform.mli  README.md  Types.ml  caml_bigint.ml  caml_crypto.ml  caml_gzip.ml  caml_secure_rand.ml  caml_time.ml  dune  js.js  js_bigint.ml  js_crypto.ml  js_crypto.mli  js_secure_rand.ml  js_secure_rand.mli  js_time.ml  platform.cppo.ml  platform.mli  types.ml
src/platform/caml/: Bigint.ml  Crypto.mli  PlatformCaml.ml
src/platform/js/: .gitattributes  Bigint.ml  Crypto.ml  Gzip.ml  Js.js  Leemon.js  PlatformJs.ml  PlatformJs.mli  Time.ml  dune
src/platform/types/: PlatformTypes.ml  README.md  dune
src/platform_caml/: Gzip.ml  dune
src/platform_js/: Crypto.ml  Primitives.js  SecureRand.ml  SecureRand.mli
src/platform_types/: PlatformTypes.ml
src/server/: server.ml
src/telegram/: Client.ml  Client.mli  Settings.ml  Telegram.ml  dune  telegram.ml
src/tl/: Types.ml  builtin.ml  decoder.mli  dune
src/tl/.old/: store.mli  types.ml
src/tl/cli/: dune
src/tl/lib/: Checker.ml  Checker.mli  Codegen.ml  Codegen.mli  Err.ml  Graph.ml  Lexer.mll  Magic.mli  MenhirParser.mly  Parser.ml  Store.ml  Store.mli  TestChecker.ml  TestCodegen.ml  TestParser.ml  Translate.ml  dune
src/tl/runtime/: Builtin.ml  Decoder.ml  Encoder.ml  Encoder.mli  I32.ml  README.md  Types.ml  dune
src/tl/tl-cli/: TLCli.ml
src/tl/tl-lib/: Ast.ml  Err.ml  Graph.ml  Loc.ml  Loc.mli  Magic.ml  Store.mli  TLLib.ml  TestCodegen.ml  Types.ml  dune
src/tl/tl-runtime/: Decoder.mli  Encoder.mli  TLRuntime.ml  Types.ml
src/tlgen/: .gitignore  dune
src/tlschema/: .gitignore  dune
src/transport/tcp_abridged_caml/: TransportTcpAbridgedCaml.ml  TransportTcpAbridgedCaml.mli  dune
src/transport/tcp_full_caml/: TransportTcpFullCaml.ml  dune
src/transport/tcp_full_node/: TcpFull.js  TransportTcpFullNode.ml  dune
src/transport/types/: TransportTypes.ml  dune
test/: Common.ml  Test.ml  TestAesIge.ml  TestFactorization.ml  dune  test.ml  test_aes_ige.ml  test_factorization.ml
