opam-version: "2.0"
name: "camlproto"
version: "0.0.0"
synopsis: "Type-safe client implementation of Telegram's MTProto"
description: "Type-safe client implementation of Telegram's MTProto"
maintainer: "Bannerets <comonoid@protonmail.com>"
author: "Bannerets <comonoid@protonmail.com>"
license: "MIT"
homepage: "https://github.com/Bannerets/camlproto"
dev-repo: "git+https://github.com/Bannerets/camlproto.git"
bug-reports: "https://github.com/Bannerets/camlproto/issues"
build: [["dune" "build" "-p" name "-j" jobs]]
run-test: [["dune" "runtest" "-p" name]]
depends: [
  "ocaml" {>= "4.07.0"}
  "dune" {>= "1.11.0"}
  "ppx_expect" # can't be "with-test", since let%expect_test needs to be preprocessed away
  "js_of_ocaml-compiler" {>= "3.2.0" & < "4.0"}
  "js_of_ocaml-ppx" {>= "3.2.0" & < "4.0"}
  "js_of_ocaml" {>= "3.2.0" & < "4.0"}
  "bisect_ppx" # again, "dev"/"with-test" don't work for now, https://github.com/ocaml/dune/issues/57
  "base"
  "cstruct" {>= "3.0.0"}
  "lwt"
  "lwt_ppx"
  "logs" {>= "0.6.0"}
  "nocrypto" {>= "0.5.0"}
  "zarith"
  "ezgzip"
  "fmt" {>= "0.8.7"}
  "ppx_let" {>= "v0.11.0"}
  "ppx_deriving" {>= "4.3" & < "5.0"}
  "ppx_hash"
  # "ppx_import" {>= "1.5" & < "2.0"}
  "menhir"
]
pin-depends: [
  ["bisect_ppx.git" "git+https://github.com/aantron/bisect_ppx.git#02c841c257126cb7d672ae84da646a1e165d87ca"]
]
