opam-version: "2.0"
name: "camlproto"
version: "0.0.0"
synopsis: "Type-safe client implementation of Telegram's MTProto"
description: "Type-safe client implementation of Telegram's MTProto"
maintainer: "Bannerets <comonoid@protonmail.com>"
author: "Bannerets <comonoid@protonmail.com>"
license: "MIT"
homepage: "https://github.com/Bannerets/camlproto"
dev-repo: "git+https://github.com/Bannerets/camlproto.git"
bug-reports: "https://github.com/Bannerets/camlproto/issues"
build: [["dune" "build" "-p" name "-j" jobs]]
run-test: [["dune" "runtest" "-p" name]]
depends: [
  "ocaml" {>= "4.08.1"}
  "dune" {>= "2.7.1"}
  "base" {>= "v0.14.0"}
  "js_of_ocaml-compiler" {>= "4.0"}
  "js_of_ocaml-ppx" {>= "4.0"}
  "js_of_ocaml" {>= "4.0"}
  "bisect_ppx" {dev & >= "2.5.0"}
  "ppx_expect" # cannot be "with-test" because let%expect_test should be preprocessed away
  "ppx_let" # TODO: replace with (let*)?
  "ppx_deriving"
  "ppx_hash"
  # "ppx_import" {>= "1.5" & < "2.0"}
  "cstruct"
  "lwt"
  "lwt_ppx"
  "logs"
  "nocrypto" {>= "0.5.0"} # Note: Does not work with ocamls 4.08.0 (but works with 4.08.1)
  "zarith"
  "ezgzip"
  "fmt"
  "menhir"
]
