(library
  (name MTProtoTransport)
  (public_name camlproto.mtproto_transport)
  (libraries
    base cstruct lwt lwt.unix js_of_ocaml logs
    camlproto.platform camlproto.math camlproto.mtproto_misc)
  (js_of_ocaml (javascript_files
    JsTcpFull.js
    JsWebsocket.js))
  (preprocess (pps lwt_ppx js_of_ocaml-ppx))
)

(rule
  (targets MTProtoTransport.ml)
  (deps   (:first-dep MTProtoTransport.cppo.ml))
  (action (run %{bin:cppo} %{first-dep} -D "%{profile} 1" -o %{targets}))
)
