(rule
  (target Mtproto.ml)
  (deps
    %{project_root}/src/tl/cli/TLCli.exe
    %{project_root}/schema/mtproto.tl
  )
  (action (run %{deps} %{target}))
)

(rule
  (target Telegram.ml)
  (deps
    %{project_root}/src/tl/cli/TLCli.exe
    %{project_root}/schema/l108.tl
  )
  (action (run %{deps} %{target}))
)

(library
  (name TLSchema)
  (public_name camlproto.tlschema)
  (libraries base camlproto.tl.runtime)
)
