(ocamllex (modules Lexer))
(menhir (modules MenhirParser))

(library
  (name TLLib)
  (public_name camlproto.tl.lib)
  (libraries base ppx_deriving ppx_let fmt)
  (preprocess (pps
    bisect_ppx --conditional
    ppx_expect
    ppx_deriving.show ppx_let
    ppx_sexp_conv ppx_compare ppx_hash))
  (inline_tests)
)
